--- a/faqs.html
+++ b/faqs.html
@@ -38,8 +38,8 @@
     <section class="section">
         <h1 id="pregFrecuentes">Preguntas Frecuentes</h1>
         <article class="section__article">
-            <h2 class="section__titulo">Las aceitunas solo pueden ser verdes?</h2>
-            <p class="section__p">No! Las aceitunas puede ser tanto verdes como negras y cualquier sabor puede ser preparada en cualquiera de las dos variedades</p>
+            <h2 class="section__titulo">Los sabores solo vienen con aceitunas verdes?</h2>
+            <p class="section__p">No! Las aceitunas puede ser tanto verdes como negras y cualquier sabor puede ser preparado en cualquiera de las dos variedades</p>
         </article>
         <article class="section__article">
             <h2 class="section__titulo">Los sabores se pueden combinar?</h2>
