--- a/faqs.html
+++ b/faqs.html
@@ -13,9 +13,10 @@
     <title>Olivarte | Info</title>
 </head>
 <body id="grilla2">
-    <div class="olivArte"> <a href="index.html" >Olivarte</a></div>
+    
     <header>
         <nav class="menu">
+          <div class="logo"> <a href="index.html" >Olivarte</a></div>
             <ul class="menu__lista">
                 <li class="menu__item"> 
                     <a class="menu__link" href="index.html">HOME</a> 
@@ -34,7 +35,7 @@
                 </li>
             </ul>
         </nav>
-    </header>
+    </header> 
     <section class="section">
         <h1 id="pregFrecuentes">Preguntas Frecuentes</h1>
         <article class="section__article">
@@ -50,14 +51,28 @@
             <p class="section__p">Sí, tenemos envío con cadete propio en todo Rosario y alrededores. Ver <a href="https://www.instagram.com/oliv.arte/?hl=es-la">instagram</a> para mas información</p>
         </article>
     </section>
-    <div class="divFoot">
-        <footer>
-        <div class="redesSociales">
-            <p>Olivarte SA</p>
-            <a href="https://www.facebook.com/Olivarte-336791706482646"  target=_blank title="Facebook" class="icono"><i class="fab fa-facebook-f"></i></a>
-            <a href="https://www.instagram.com/oliv.arte/?hl=es-la" target=_blank title="Instagram" class="icono"><i class="fab fa-instagram"></i></a>
-        </div>
-        </footer>
+  <!--Footer-->
+  <div class="divFoot">
+    <footer>
+      <h3 class="tituloFoot">Contacto</h3>
+      <ul class="datos">
+        <li>Tel:+543413280969</li>
+        <li>Felipe Moré 2986</li>
+        <li>Rosario, Argentina</li>
+      </ul>
+      <h3 class="tituloFoot">Redes sociales</h3>
+      <div class="redesSociales">
+        <a href="https://www.facebook.com/Olivarte-336791706482646"  target=_blank title="Facebook" class="icono"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://www.instagram.com/oliv.arte/?hl=es-la" target=_blank title="Instagram" class="icono"><i class="fab fa-instagram"></i></a>
+        <a href="" target=_blank title="Instagram" class="icono"><i class="fab fa-twitter"></i></a>
     </div>
+    <h3 class="tituloFoot" id="pago">Formas de Pago</h3>
+    <div class="legalInfo">
+      <i class="far fa-money-bill-alt"></i></li>
+      <i class="far fa-credit-card"></i></li>
+      <i class="fab fa-bitcoin"></i></li>
+    </div>
+    </footer>
+</div>
 </body>
 </html>
