--- a/quienessomos.html
+++ b/quienessomos.html
@@ -13,9 +13,9 @@
     <title>Olivarte | Quienes somos</title>
 </head>
 <body id="grilla4">
-    <div id="olivArte"> <a href="index.html" >Olivarte</a></div>
     <header>
         <nav class="menu">
+            <div id="logo"> <a href="index.html" >Olivarte</a></div>
             <ul>   
                 <li> <a href="index.html">HOME</a> </li>
                 <li> <a href="quienessomos.html">QUIÉNES SOMOS</a> </li>
@@ -44,10 +44,23 @@
 
     <div class="divFoot">
         <footer>
-        <div class="redesSociales">
-            <p>Olivarte SA</p>
+          <h3 class="tituloFoot">Contacto</h3>
+          <ul class="datos">
+            <li>Tel:+543413280969</li>
+            <li>Felipe Moré 2986</li>
+            <li>Rosario, Argentina</li>
+          </ul>
+          <h3 class="tituloFoot">Redes sociales</h3>
+          <div class="redesSociales">
             <a href="https://www.facebook.com/Olivarte-336791706482646"  target=_blank title="Facebook" class="icono"><i class="fab fa-facebook-f"></i></a>
             <a href="https://www.instagram.com/oliv.arte/?hl=es-la" target=_blank title="Instagram" class="icono"><i class="fab fa-instagram"></i></a>
+            <a href="twitter.html" target=_blank title="Instagram" class="icono"><i class="fab fa-twitter"></i></a>
+        </div>
+        <h3 class="tituloFoot" id="pago">Formas de Pago</h3>
+        <div class="legalInfo">
+          <i class="far fa-money-bill-alt"></i></li>
+          <i class="far fa-credit-card"></i></li>
+          <i class="fab fa-bitcoin"></i></li>
         </div>
         </footer>
     </div>
