--- a/contacto.html
+++ b/contacto.html
@@ -11,13 +11,12 @@
     <link rel="stylesheet" href="css/style.css">
     <meta name="keywords" content="aceitunas, aceitunas rellenas, delicatessen, gourmet, artesanal, aceitunas verdes, aceitunas negras">
     <meta name="description" content="¿Tenes alguna duda sobre Olivarte? ¡Contactanos! En breve te responderemos.">
-    <title>Olivarte | contacto</title>
+    <title>Olivarte | Contacto</title>
 </head>
 <body id="grilla3">
-  <div id="olivArte"> <a href="index.html" >Olivarte</a></div>
     <header>
-      
         <nav class="menu">
+            <div id="logo"> <a href="index.html" >Olivarte</a></div>
             <ul>
                 <li> <a href="index.html">HOME</a> </li>
                 <li> <a href="quienessomos.html">QUIÉNES SOMOS</a> </li>
@@ -28,9 +27,9 @@
         </nav>
     </header>
  
- <!--cambiar con bootstrap-->
+    <div id="form">
     <form  action="">
-        <p class="parrafos">Contacto</p>
+        <h1 class="contacto">Contacto:</h1>
         <div class="mb-2">
             <label for="nombre" class="form-label">Nombre:</label>
             <input type="text" class="form-control" id="nombre" placeholder="Inserte su nombre">
@@ -58,16 +57,29 @@
             <button class="btn btn-primary" type="submit">Reestablecer</button>
           </div> 
     </form>
-
-    <div class="divFoot">
-        <footer>
-        <div class="redesSociales">
-            <p>Olivarte SA</p>
-            <a href="https://www.facebook.com/Olivarte-336791706482646"  target=_blank title="Facebook" class="icono"><i class="fab fa-facebook-f"></i></a>
-            <a href="https://www.instagram.com/oliv.arte/?hl=es-la" target=_blank title="Instagram" class="icono"><i class="fab fa-instagram"></i></a>
-        </div>
-        </footer>
-    </div>
+</div>
+<div class="divFoot">
+  <footer>
+    <h3 class="tituloFoot">Contacto</h3>
+    <ul class="datos">
+      <li>Tel:+543413280969</li>
+      <li>Felipe Moré 2986</li>
+      <li>Rosario, Argentina</li>
+    </ul>
+    <h3 class="tituloFoot">Redes sociales</h3>
+    <div class="redesSociales">
+      <a href="https://www.facebook.com/Olivarte-336791706482646"  target=_blank title="Facebook" class="icono"><i class="fab fa-facebook-f"></i></a>
+      <a href="https://www.instagram.com/oliv.arte/?hl=es-la" target=_blank title="Instagram" class="icono"><i class="fab fa-instagram"></i></a>
+      <a href="twitter.html" target=_blank title="Instagram" class="icono"><i class="fab fa-twitter"></i></a>
+  </div>
+  <h3 class="tituloFoot" id="pago">Formas de Pago</h3>
+  <div class="legalInfo">
+    <i class="far fa-money-bill-alt"></i></li>
+    <i class="far fa-credit-card"></i></li>
+    <i class="fab fa-bitcoin"></i></li>
+  </div>
+  </footer>
+</div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
