--- a/faqs.html
+++ b/faqs.html
@@ -40,7 +40,7 @@
         <h1 id="pregFrecuentes">Preguntas Frecuentes</h1>
         <article class="section__article">
             <h2 class="section__titulo">Los sabores solo vienen con aceitunas verdes?</h2>
-            <p class="section__p">No! Las aceitunas puede ser tanto verdes como negras y cualquier sabor puede ser preparado en cualquiera de las dos variedades</p>
+            <p class="section__p">No! Las aceitunas puede ser tanto verdes como negras y cualquier sabor puede ser preparado en cualquiera de las dos variedades.</p>
         </article>
         <article class="section__article">
             <h2 class="section__titulo">Los sabores se pueden combinar?</h2>
@@ -48,7 +48,7 @@
         </article>
         <article class="section__article">
             <h2 class="section__titulo">Hacen envios?</h2>
-            <p class="section__p">Sí, tenemos envío con cadete propio en todo Rosario y alrededores. Ver <a href="https://www.instagram.com/oliv.arte/?hl=es-la">instagram</a> para mas información</p>
+            <p class="section__p">Sí, tenemos envío con cadete propio en todo Rosario y alrededores. Ver <a href="https://www.instagram.com/oliv.arte/?hl=es-la">instagram</a> para mas información.</p>
         </article>
     </section>
   <!--Footer-->
