--- a/productos.html
+++ b/productos.html
@@ -106,16 +106,16 @@
 
   <section  id="quesito">
     <article data-aos="fade-up" class="producto">
-      <img src="media/quesoCapresse.svg" alt="">
-      <p></p>
+      <img src="media/picante.svg" alt="frasco queso picante">
+      <p>Quesos macerados en aceite con un toque de oliva, ají triturado, pimienta de cayena y ají putaparió.</p>
     </article>
     <article  data-aos="fade-up" class="producto">
-      <img src="" alt="">
-      <p></p>
+      <img src="media/pimienta.svg" alt="frasco queso a las 4 pimientas">
+      <p>Quesos macerados en aceite con un toque de oliva, laurel, tomates secos, pimienta negra, pimienta rosa, pimienta verde y pimienta de Jamaica.</p>
     </article>
     <article data-aos="fade-up" class="producto">
-      <img src="" alt="">
-      <p></p>
+      <img src="media/Mediterraneo.svg" alt="frasco queso mediterraneo">
+      <p>Quesos macerados en aceite con un toque de oliva, tomates secos, ajo, albahaca y aceitunas negras.</p>
     </article>
   </section>  
 
