--- a/productos.html
+++ b/productos.html
@@ -62,7 +62,7 @@
       <p>Aceitunas provenientes de La Rioja "Virgen del Lago" rellenas de jamón crudo "Paladini", en frascos de 190cc o 360cc.</p>
     </article>
     <article data-aos="fade-up" id="salame" class="producto">
-      <img src="media/salame.svg" alt="aceitunas rellenas de salame">
+      <img src="media/salames.svg" alt="aceitunas rellenas de salame">
       <p>Aceitunas provenientes de La Rioja "Virgen del Lago" rellenas de salame picado fino "Paladini", en frascos de 190cc o 360cc.</p>
     </article>
     <article data-aos="fade-up" id="mix1" class="producto">
